--- a/common.css
+++ b/common.css
@@ -4,22 +4,24 @@
 			margin: left;
 			border: 1px solid black;
 		}
-
 		/* 画面構成 */
+		
 		.box1 {
 			width: 450px;
 			height: 139px;
-			background-image: URL(images/pokemonL.jpg);
+			background-image: URL(images/bakemonL.png);
 			background-repeat: no-repeat;
 			background-position: right top;
 		}
+		
 		.box2 {
 			width: 450px;
 			height: 139px;
-			background-image: URL(images/pokemonP.jpg);
+			background-image: URL(images/bakemonP.png);
 			background-repeat: no-repeat;
 			background-position: left bottom;
 		}
+		
 		.box3 {
 			width: 434px;
 			height: 100px;
@@ -27,30 +29,33 @@
 			padding-left: 8px;
 			padding-right: 8px;
 		}
-
 		/* HPゲージの配置 */
+		
 		.left {
 			position: relative;
 			top: 20px;
 			left: 20px;
 		}
+		
 		.right {
 			text-align: right;
 			position: relative;
 			top: 60px;
 			right: 20px;
 		}
-
 		/* HPゲージのデザイン */
+		
 		meter {
 			width: 150px;
 			height: 15px;
 		}
+		
 		meter::-webkit-meter-bar {
 			background: none;
 			background-color: whiteSmoke;
 			border: 2px solid black;
 		}
+		
 		meter::-webkit-meter-optimum-value {
 			background: none;
 			background-color: gray;
